# sphinx-versioned-docs

./: README.rst  pyproject.toml
.github/workflows/: test.yml
sphinx_versioned/: __main__.py  build.py  sphinx_.py  versions.py
sphinx_versioned/_static/: _rst_properties.css
sphinx_versioned/_templates/: versions.html  versions_picker.html
tests/: test_branch_selection.py
