[tool.poetry]
name = "sphinx-versioned-docs"
version = "0.1.0"
description = "This tool is a fork of https://github.com/devanshshukla99/sphinx-versioned-docs with some additional features and bugfixes"
authors = ["Daniel Beliavskij <d.beliavskij@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "sphinx_versioned" }
]

[tool.poetry.scripts]
sphinx-versioned = "sphinx_versioned.__main__:app"

[tool.poetry.dependencies]
python = "^3.12"
GitPython = "^3.1.31"
loguru = "^0.7.0"
sphinx = "^8.2.3"
typer = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
